--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ScheduleApp</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>スケジュール管理アプリ</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
   </head>
+<h1>
 
+</h1>
   <body>
+    <header>
+      <h1><%= yield(:title) %></h1>
+    </header>
+
+    <div class="flash-messages">
+      <% if flash[:notice] %>
+        <div class="notice">
+          <%= flash[:notice] %>
+        </div>
+      <% elsif flash[:alert] %>
+        <div class="alert">
+          <%= flash[:alert] %>
+        </div>
+      <% end %>
+    </div>
+
     <%= yield %>
   </body>
 </html>
